--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-copy": "^1.0.1",
     "gulp-less": "^3.3.2",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0"
